--- a/notebooks/validate.ipynb
+++ b/notebooks/validate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1a02ca28-e6cf-4dba-959d-93df23ba2aeb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "04ef6ce2-2a23-4d2f-9932-0c4dac513583",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "c59beb1a-154a-4942-b93a-548d35b43530",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "2cc66f4c-de2c-40f8-9e64-de24c5906d81",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
     "        seq_ratio = SequenceMatcher(None, sup_norm.lower(), ref_norm.lower()).ratio()\n",
     "        emb_cos_sim = embedding_cosine_similarity(sup_norm.lower(), ref_norm.lower(), embedding_model)\n",
     "        char_ngram_jaccard_score = char_ngram_jaccard(sup_norm.lower(), ref_norm.lower())     \n",
-    "        features = np.array([[cos_sim, jac, substr, seq_ratio, emb_cos_sim, char_ngram_jaccard_score]])\n",
+    "        features = np.array([[0.8 * cos_sim, jac, substr, seq_ratio, 1.5 * emb_cos_sim, char_ngram_jaccard_score]])\n",
     "        return features\n",
     "    elif feature_type == \"embedding_feature\":\n",
     "        model_name = ConfigLoader.get_config()[\"sentence_transformer_model\"]\n",
@@ -153,6 +153,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "2bda5995-d330-4be8-9ca7-5564d3f70a89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature importances: [0.7914176  0.04135257 0.12760274 0.01846616 0.01104024 0.01012074]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Feature importances:\", model.feature_importances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "04275dd5-a892-40b3-8b7a-2fa4114554c7",
    "metadata": {},
@@ -182,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "645650ae-8bd6-42c0-bf48-294a932edd29",
    "metadata": {},
    "outputs": [],
@@ -328,10 +346,82 @@
    "execution_count": null,
    "id": "acee4947-a146-4ff1-9793-0020ac02ab8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-02 03:24:27,470 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> classic room score: 0.5183444619178772\n",
+      "2025-04-02 03:24:28,890 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> superior room score: 0.9867157340049744\n",
+      "2025-04-02 03:24:30,432 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> superior room with city view score: 0.0058548711240291595\n",
+      "2025-04-02 03:24:32,039 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> balcony room score: 0.9667254090309143\n",
+      "2025-04-02 03:24:33,494 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> classic room disability access score: 0.9609687924385071\n",
+      "2025-04-02 03:24:35,049 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> superior room disability access score: 0.00042875681538134813\n",
+      "2025-04-02 03:24:37,117 - cupid-api - INFO - classic room olympic queen bed room only ->/t-> junior suite disability access score: 0.0004191535117570311\n",
+      "2025-04-02 03:24:37,122 - cupid-api - INFO - Best Match: superior room score: 0.9867157340049744 True of classic room olympic queen bed room only\n",
+      "2025-04-02 03:24:38,684 - cupid-api - INFO - classic room ada room only ->/t-> classic room score: 0.9936403632164001\n",
+      "2025-04-02 03:24:40,524 - cupid-api - INFO - classic room ada room only ->/t-> superior room score: 0.988987386226654\n",
+      "2025-04-02 03:24:42,002 - cupid-api - INFO - classic room ada room only ->/t-> superior room with city view score: 0.9845609664916992\n",
+      "2025-04-02 03:24:43,845 - cupid-api - INFO - classic room ada room only ->/t-> balcony room score: 0.988987386226654\n",
+      "2025-04-02 03:24:45,743 - cupid-api - INFO - classic room ada room only ->/t-> classic room disability access score: 0.9801380038261414\n",
+      "2025-04-02 03:24:47,549 - cupid-api - INFO - classic room ada room only ->/t-> superior room disability access score: 0.01049829088151455\n",
+      "2025-04-02 03:24:49,155 - cupid-api - INFO - classic room ada room only ->/t-> junior suite disability access score: 0.00027855843654833734\n",
+      "2025-04-02 03:24:49,156 - cupid-api - INFO - Best Match: classic room score: 0.9936403632164001 True of classic room ada room only\n",
+      "2025-04-02 03:24:50,875 - cupid-api - INFO - superior room ada room only ->/t-> classic room score: 0.988987386226654\n",
+      "2025-04-02 03:24:52,420 - cupid-api - INFO - superior room ada room only ->/t-> superior room score: 0.7027879953384399\n",
+      "2025-04-02 03:24:54,033 - cupid-api - INFO - superior room ada room only ->/t-> superior room with city view score: 0.9798614978790283\n",
+      "2025-04-02 03:24:56,552 - cupid-api - INFO - superior room ada room only ->/t-> balcony room score: 0.9878467917442322\n",
+      "2025-04-02 03:24:57,979 - cupid-api - INFO - superior room ada room only ->/t-> classic room disability access score: 0.011586282402276993\n",
+      "2025-04-02 03:24:59,419 - cupid-api - INFO - superior room ada room only ->/t-> superior room disability access score: 0.9752486348152161\n",
+      "2025-04-02 03:25:00,814 - cupid-api - INFO - superior room ada room only ->/t-> junior suite disability access score: 0.0004161204269621521\n",
+      "2025-04-02 03:25:00,815 - cupid-api - INFO - Best Match: classic room score: 0.988987386226654 True of superior room ada room only\n",
+      "2025-04-02 03:25:02,255 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> classic room score: 0.9838134050369263\n",
+      "2025-04-02 03:25:03,768 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> superior room score: 0.957274317741394\n",
+      "2025-04-02 03:25:05,319 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> superior room with city view score: 0.9725971817970276\n",
+      "2025-04-02 03:25:07,383 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> balcony room score: 0.9738733172416687\n",
+      "2025-04-02 03:25:09,035 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> classic room disability access score: 0.007499410770833492\n",
+      "2025-04-02 03:25:10,653 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> superior room disability access score: 0.9668691754341125\n",
+      "2025-04-02 03:25:12,320 - cupid-api - INFO - superior room olympic queen bed room only ->/t-> junior suite disability access score: 0.0005292075220495462\n",
+      "2025-04-02 03:25:12,321 - cupid-api - INFO - Best Match: classic room score: 0.9838134050369263 True of superior room olympic queen bed room only\n",
+      "2025-04-02 03:25:13,847 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> classic room score: 0.00849504116922617\n",
+      "2025-04-02 03:25:15,520 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> superior room score: 0.9522742033004761\n",
+      "2025-04-02 03:25:18,300 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> superior room with city view score: 0.8687634468078613\n",
+      "2025-04-02 03:25:19,786 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> balcony room score: 0.005624936427921057\n",
+      "2025-04-02 03:25:21,622 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> classic room disability access score: 0.0027038392145186663\n",
+      "2025-04-02 03:25:23,061 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> superior room disability access score: 0.9866518974304199\n",
+      "2025-04-02 03:25:24,699 - cupid-api - INFO - superior city view olympic queen bed room only ->/t-> junior suite disability access score: 0.0006202470394782722\n",
+      "2025-04-02 03:25:24,700 - cupid-api - INFO - Best Match: superior room disability access score: 0.9866518974304199 True of superior city view olympic queen bed room only\n",
+      "2025-04-02 03:25:26,560 - cupid-api - INFO - balcony room olympic queen bed room only ->/t-> classic room score: 0.9809516668319702\n",
+      "2025-04-02 03:25:28,118 - cupid-api - INFO - balcony room olympic queen bed room only ->/t-> superior room score: 0.9880430698394775\n",
+      "2025-04-02 03:25:29,640 - cupid-api - INFO - balcony room olympic queen bed room only ->/t-> superior room with city view score: 0.0058548711240291595\n",
+      "2025-04-02 03:25:31,454 - cupid-api - INFO - balcony room olympic queen bed room only ->/t-> balcony room score: 0.6328341960906982\n",
+      "2025-04-02 03:25:32,989 - cupid-api - INFO - balcony room olympic queen bed room only ->/t-> classic room disability access score: 0.0024121361784636974\n"
+     ]
+    }
+   ],
    "source": [
-    "match_prob: float = model.predict_proba([[0.23206778, 0.68571429, 0.        , 0.91483871 ]])\n",
-    "match_prob[0,1]"
+    "Results  =  []\n",
+    "UnmappedRooms =   []\n",
+    "\n",
+    "for supplier_room_name in supplier_room_names:\n",
+    "    best_match: str = \"\"\n",
+    "    best_score: float = 0.0\n",
+    "    for reference_room_name in reference_room_names:\n",
+    "        features = get_feature_inference(ref_name=reference_room_name, sup_name=supplier_room_name, vectorizer=vectorizer)\n",
+    "        match_prob: float = model.predict_proba(features.reshape(1,-1))[0, 1]\n",
+    "        if match_prob >= best_score:\n",
+    "            best_score = match_prob\n",
+    "            best_match = normalize_room_name(reference_room_name)\n",
+    "        \n",
+    "        logger.info(f\"{normalize_room_name(supplier_room_name)} ->/t-> {normalize_room_name(reference_room_name)} score: {match_prob}\")\n",
+    "\n",
+    "    logger.info(\n",
+    "        f\"Best Match: {best_match} score: {best_score} {best_score >= 0.9} of {normalize_room_name(supplier_room_name)}\"\n",
+    "    )\n",
+    "    if best_score >= 0.9:\n",
+    "        Results.append(supplier_room_name)\n",
+    "    else:\n",
+    "        UnmappedRooms.append(supplier_room_name)"
    ]
   },
   {
