trying new input training data

--- a/notebooks/eda2.ipynb
+++ b/notebooks/eda2.ipynb
@@ -730,7 +730,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "988f0597-a743-4d18-ab57-dff0f4e85fd1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
